network-policy/example-1/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: test-namespace
  labels:
    app: pod3
spec:
  containers:
  - name: nginx
    image: nginx
